# nvidia-demo

./: .env.example  .gitignore  code_documentation_generator.py  requirements.txt  review_docs.py  test.py
LAB4/: L_4.py  training_data.pkl
LAB5/: L_5.py  test_tools.py
LAB5/config/: agents.yaml
LAB6/: cerebras1.py
LAB6/new_project/: pyproject.toml  report.md  report_blog.md
LAB6/new_project/new_flow/: README.md  poem.txt  pyproject.toml
LAB6/new_project/new_flow/src/new_flow/: main.py
LAB6/new_project/src/new_project/: crew.py  main.py
LAB6/new_project/src/new_project/config/: agents.yaml  tasks.yaml
LAB7/equipo1/: .gitignore  README.md  pyproject.toml  test1.py  test2.py  test3.py
LAB7/equipo1/blog-posts/: new_post.md
LAB7/equipo1/knowledge/: dos.csv
LAB7/equipo1/src/equipo1/: crew.py  main.py
config/: documentation_agents.yaml  planner_agents.yaml
