[project]
name = "new_project"
version = "0.1.0"
description = "Blog Experiment 2.0"
authors = [
    { name = "Christian Asmussen", email = "christian@casmuss.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "langtrace-python-sdk",
]

[project.scripts]
new_project = "new_project.main:run"
run_crew = "new_project.main:run"
train = "new_project.main:train"
replay = "new_project.main:replay"
test = "new_project.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
