[project]
name = "equipo1"
version = "0.1.0"
description = "equipo1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
equipo1 = "equipo1.main:run"
run_crew = "equipo1.main:run"
train = "equipo1.main:train"
replay = "equipo1.main:replay"
test = "equipo1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
